# mscthesis

./: .gitattributes  .gitignore  .hgignore  README.md
code/: AUV.ini  filt.cpp  filt.h  nav.cpp  nav_ros.cpp  nav_ros.h  nav_trial.cpp  nav_trial.h  test.cpp
code/C++andROS/: CMakeLists.txt  filt.cpp  filt.h  filtUKF.cpp  nav_ekf_ros.cpp  nav_ekf_ros.h  nav_ekf_rosREAD.h  nav_ros.h  test.cpp
code/MATLAB/: draw_ellipse.m  readlogFile.m
code/auv_nav_miroslav/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  nav_test_rviz.vcg  nav_test_rviz_old.vcg
code/nav-ekf-v1/: filt.cpp  filt.h
code/nav-ekf-v2/: nav_ekf.cpp  nav_ekf_new.cpp
paper/: implementation.tex  kalman.tex  paper.tex  refs.bib  results.tex  sim-straight1.eps
poster/: HeriottWatt-orogonal.eps  Makefile  auv-axes.eps  auv-model.eps  auv-model.sv  fusion-all.eps  hwLogoYBg.eps  poster.tex  square-filtering.eps  ubLogoYBg.eps  vibotLogoYBg.eps
poster/baposter/: poster.tex
pres/: beamer_template.tex  concl.tex  ekf.tex  fusion.tex  future.tex  issues.tex  missions-rec.tex  missions-spiral.tex  motivation.tex  nav.tex  pres.tex  results.tex  sensors.tex  state.tex  sys-model.tex  ukf.tex  why-kalman.tex
pres/fig/: auv-axes.eps  diagram-kalman.eps  dynamics.eps  lbl-gps.eps  map.eps  model.eps  orig.eps  path.eps  positioning.eps  rotate.eps  spiral-depth.eps  spiral3d.eps  square-trajectory.eps  synch.eps
pres/images/: HWLogo.eps  edinburgh.eps  norwegianSea.eps
report/: sample_new.tex
tests/yawSim2/: logFile.input  logFile.obser  logFile.old  logFile.params  sim-straight2.eps
thesis/: header.tex  refs.bib  shortcuts.tex  thesis.tex
thesis/auv-overview/: auv-overview.tex
thesis/conclusions/: conclusions.tex
thesis/figures/: compareE-UKF.eps  drawing.eps  existing.eps  existingNav2972.eps  filtered.eps  noLBLused.eps  spiral-DR.eps  start_tracking.eps  straight-DR.eps  straightScenarioEKFinCpp.eps  whyAngleWrap.eps  withEKF2972.eps  withLBL-withoutLBL-EKF.eps  withLBL.eps  withLBLAll.eps
thesis/intro/: intro.tex
thesis/kalman/: kalman.tex
thesis/lit-review/: lit-review.tex
thesis/methodology/: addToMethodology  methodology.tex
(+233 files in other folders)
